[package]
name = "invoice-rs"
version = "0.1.0"
edition = "2021"
authors = ["sandmannmax <mail@mxsandmann.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
genpdf = "0.2.0"
azul-text-layout = "0.0.4"
